Refactor and enhance GLFW support