@@ -1,5 +1,6 @@
 plugins {
 	kotlin("jvm")
+	application
 }
 
 val lwjglNatives = Pair(
@@ -42,3 +43,9 @@ dependencies {
 
 
 
+application {
+	mainClass.set("io.ygdrasil.wgpu.examples.GlfwMainKt")
+	applicationDefaultJvmArgs += "-XstartOnFirstThread"
+	applicationDefaultJvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
+	applicationDefaultJvmArgs += "-DRUST_BACKTRACE=1"
+}
